[gd_scene load_steps=3 format=3 uid="uid://bdcp7su4vq57h"]

[ext_resource type="Script" path="res://gameover.gd" id="1_frgac"]
[ext_resource type="FontFile" uid="uid://dk5y4y3togj5c" path="res://PhysicsCarGameAssets/Milker.otf" id="2_baqn6"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_frgac")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = -14.0
offset_top = -10.0
offset_right = 1995.0
offset_bottom = 1114.0
color = Color(0.0470588, 0.0470588, 0.0470588, 0.827451)

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 622.0
offset_top = 60.0
offset_right = 1282.0
offset_bottom = 160.0
theme_override_colors/font_color = Color(0.487147, 0.0235506, 0.0468242, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("2_baqn6")
theme_override_font_sizes/font_size = 100
text = "GAME OVER"

[node name="restartButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 817.0
offset_top = 673.0
offset_right = 1081.0
offset_bottom = 773.0
theme_override_fonts/font = ExtResource("2_baqn6")
theme_override_font_sizes/font_size = 40
text = "RESTART"

[node name="distanceLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 709.0
offset_top = 197.0
offset_right = 749.0
offset_bottom = 221.0
theme_override_fonts/font = ExtResource("2_baqn6")
theme_override_font_sizes/font_size = 24
text = "0m"

[node name="highscoreLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 1008.0
offset_top = 196.0
offset_right = 1048.0
offset_bottom = 220.0
theme_override_fonts/font = ExtResource("2_baqn6")
theme_override_font_sizes/font_size = 24
text = "0m"

[node name="exit" type="Button" parent="Control"]
layout_mode = 0
offset_left = 814.0
offset_top = 796.0
offset_right = 1078.0
offset_bottom = 896.0
theme_override_fonts/font = ExtResource("2_baqn6")
theme_override_font_sizes/font_size = 40
text = "exit"
